--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "jsdom": "^21.1.1",
     "method-override": "^3.0.0",
     "mongoose": "^7.0.3",
-    "razorpay": "^2.8.6"
+    "razorpay": "^2.8.6",
+    "swup": "^3.0.5"
   },
   "devDependencies": {
     "dotenv": "^16.0.3",
